Updated lexer by adding classes to correspond to various JSON elements, linked via a tag interface